--- a/environment.yml
+++ b/environment.yml
@@ -7,25 +7,41 @@ dependencies:
   - bleach=3.0.2=py36_0
   - ca-certificates=2018.03.07=0
   - certifi=2018.11.29=py36_0
+  - cycler=0.10.0=py36_0
+  - dbus=1.13.6=h746ee38_0
   - decorator=4.3.0=py36_0
   - entrypoints=0.2.3=py36_2
+  - expat=2.2.6=he6710b0_0
+  - fontconfig=2.13.0=h9420a91_0
+  - freetype=2.9.1=h8a8886c_1
+  - glib=2.56.2=hd408876_0
   - gmp=6.1.2=h6c8ec71_1
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.0=hb453b48_1
+  - icu=58.2=h9c2bf20_1
   - intel-openmp=2019.1=144
   - ipykernel=5.1.0=py36h39e3cac_0
   - ipython=7.2.0=py36h39e3cac_0
   - ipython_genutils=0.2.0=py36_0
   - jedi=0.13.1=py36_0
   - jinja2=2.10=py36_0
+  - jpeg=9b=h024ee3a_2
   - jsonschema=2.6.0=py36_0
   - jupyter_client=5.2.3=py36_0
   - jupyter_core=4.4.0=py36_0
+  - kiwisolver=1.0.1=py36hf484d3e_0
   - libedit=3.1.20170329=h6b74fdf_2
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=8.2.0=hdf63c60_1
   - libgfortran-ng=7.3.0=hdf63c60_0
+  - libpng=1.6.36=hbc83047_0
   - libsodium=1.0.16=h1bed415_0
   - libstdcxx-ng=8.2.0=hdf63c60_1
+  - libuuid=1.0.3=h1bed415_2
+  - libxcb=1.13=h1bed415_1
+  - libxml2=2.9.9=he19cac6_0
   - markupsafe=1.1.0=py36h7b6447c_0
+  - matplotlib=3.0.2=py36h5429711_0
   - mistune=0.8.4=py36h7b6447c_0
   - mkl=2018.0.3=1
   - mkl_fft=1.0.6=py36h7dd41cf_0
@@ -41,6 +57,8 @@ dependencies:
   - pandoc=2.2.3.2=0
   - pandocfilters=1.4.2=py36_1
   - parso=0.3.1=py36_0
+  - patsy=0.5.1=py36_0
+  - pcre=8.42=h439df22_0
   - pexpect=4.6.0=py36_0
   - pickleshare=0.7.5=py36_0
   - pip=18.1=py36_0
@@ -48,15 +66,22 @@ dependencies:
   - prompt_toolkit=2.0.7=py36_0
   - ptyprocess=0.6.0=py36_0
   - pygments=2.2.0=py36_0
+  - pyparsing=2.3.1=py36_0
+  - pyqt=5.9.2=py36h05f1152_2
   - python=3.6.7=h0371630_0
   - python-dateutil=2.7.5=py36_0
   - pytz=2018.7=py36_0
   - pyzmq=17.1.2=py36h14c3975_0
+  - qt=5.9.7=h5867ecd_1
   - readline=7.0=h7b6447c_5
+  - scipy=1.1.0=py36hfa4b5c9_1
+  - seaborn=0.9.0=py36_0
   - send2trash=1.5.0=py36_0
   - setuptools=40.6.2=py36_0
+  - sip=4.19.8=py36hf484d3e_0
   - six=1.11.0=py36_1
   - sqlite=3.25.3=h7b6447c_0
+  - statsmodels=0.9.0=py36h035aef0_0
   - terminado=0.8.1=py36_1
   - testpath=0.4.2=py36_0
   - tk=8.6.8=hbc83047_0
@@ -70,20 +95,16 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - pip:
     - coverage==4.5.2
-    - cycler==0.10.0
     - cython==0.29.1
     - deap==1.2.2
     - dill==0.2.8.2
     - gendis==1.0.9
-    - matplotlib==2.1.2
     - multiprocess==0.70.6.1
     - nose2==0.8.0
     - pathos==0.2.2
     - pox==0.2.4
     - ppft==1.6.4.8
-    - pyparsing==2.3.0
     - scikit-learn==0.20.1
-    - scipy==1.1.0
     - sklearn==0.0
     - tqdm==4.23.2
     - tslearn==0.1.18.3
