--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,6 @@
 name: gendis_test
 channels:
+  - anaconda
   - defaults
 dependencies:
   - backcall=0.1.0=py36_0
@@ -7,7 +8,6 @@ dependencies:
   - bleach=3.0.2=py36_0
   - ca-certificates=2018.03.07=0
   - certifi=2018.11.29=py36_0
-  - cycler=0.10.0=py36_0
   - dbus=1.13.6=h746ee38_0
   - decorator=4.3.0=py36_0
   - entrypoints=0.2.3=py36_2
@@ -41,7 +41,6 @@ dependencies:
   - libxcb=1.13=h1bed415_1
   - libxml2=2.9.9=he19cac6_0
   - markupsafe=1.1.0=py36h7b6447c_0
-  - matplotlib=3.0.2=py36h5429711_0
   - mistune=0.8.4=py36h7b6447c_0
   - mkl=2018.0.3=1
   - mkl_fft=1.0.6=py36h7dd41cf_0
@@ -50,10 +49,7 @@ dependencies:
   - nbformat=4.4.0=py36_0
   - ncurses=6.1=he6710b0_1
   - notebook=5.7.2=py36_0
-  - numpy=1.15.4=py36h1d66e8a_0
-  - numpy-base=1.15.4=py36h81de0dd_0
   - openssl=1.1.1a=h7b6447c_0
-  - pandas=0.23.4=py36h04863e7_0
   - pandoc=2.2.3.2=0
   - pandocfilters=1.4.2=py36_1
   - parso=0.3.1=py36_0
@@ -62,19 +58,20 @@ dependencies:
   - pexpect=4.6.0=py36_0
   - pickleshare=0.7.5=py36_0
   - pip=18.1=py36_0
+  - proj4=5.2.0=he6710b0_1
   - prometheus_client=0.4.2=py36_0
   - prompt_toolkit=2.0.7=py36_0
   - ptyprocess=0.6.0=py36_0
   - pygments=2.2.0=py36_0
-  - pyparsing=2.3.1=py36_0
+  - pyproj=1.9.6=py36h14380d9_0
   - pyqt=5.9.2=py36h05f1152_2
+  - pyshp=2.0.1=py36_0
   - python=3.6.7=h0371630_0
   - python-dateutil=2.7.5=py36_0
   - pytz=2018.7=py36_0
   - pyzmq=17.1.2=py36h14c3975_0
   - qt=5.9.7=h5867ecd_1
   - readline=7.0=h7b6447c_5
-  - scipy=1.1.0=py36hfa4b5c9_1
   - seaborn=0.9.0=py36_0
   - send2trash=1.5.0=py36_0
   - setuptools=40.6.2=py36_0
@@ -94,17 +91,27 @@ dependencies:
   - zeromq=4.2.5=hf484d3e_1
   - zlib=1.2.11=h7b6447c_3
   - pip:
+    - ansimarkup==1.4.0
+    - better-exceptions-fork==0.2.1.post6
+    - colorama==0.4.1
     - coverage==4.5.2
+    - cycler==0.10.0
     - cython==0.29.1
     - deap==1.2.2
     - dill==0.2.8.2
     - gendis==1.0.9
+    - loguru==0.2.5
+    - matplotlib==2.1.2
     - multiprocess==0.70.6.1
     - nose2==0.8.0
+    - numpy==1.14.5
+    - pandas==0.22.0
     - pathos==0.2.2
     - pox==0.2.4
     - ppft==1.6.4.8
+    - pyparsing==2.3.0
     - scikit-learn==0.20.1
+    - scipy==1.1.0
     - sklearn==0.0
     - tqdm==4.23.2
     - tslearn==0.1.18.3
